@@ -52,11 +52,6 @@
 pthread_mutex_t stderr_mutex = PTHREAD_MUTEX_INITIALIZER;
 bool stderr_erase_line = false;
 
-void stderr_msg(const char* format, ...)
-#ifdef __GNUC__
-    __attribute__ ((format (printf, 1, 2)))
-#endif
-;
 void stderr_msg(const char* format, ...) {
     pthread_mutex_lock(&stderr_mutex);
     if (stderr_erase_line) {
@@ -69,11 +64,6 @@ void stderr_msg(const char* format, ...) {
     pthread_mutex_unlock(&stderr_mutex);
 }
 
-void vstderr_prefix_line(const char*, const char*, va_list)
-#ifdef __GNUC__
-    __attribute__ ((format (printf, 1, 0)))
-#endif
-;
 void vstderr_prefix_line(const char* prefix, const char* format, va_list ap) {
     pthread_mutex_lock(&stderr_mutex);
     if (stderr_erase_line) {
